--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NewsActivity">
+    tools:context=".ui.ui.NewsActivity">
 
     <FrameLayout
         android:id="@+id/flFragment"
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:navGraph="@navigation/news_nav_graph"
-            app:defaultNavHost="true" />
+            app:defaultNavHost="true"
+             />
 
 
 
@@ -35,6 +36,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nevigation_menu"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
