--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/breakingNewsFragments"
-        android:name="com.example.newsapp.ui.fragments.BreakingNewsFragments"
+        android:name="com.example.newsapp.ui.ui.fragments.BreakingNewsFragments"
         android:label="BreakingNewsFragments" >
         <action
             android:id="@+id/action_breakingNewsFragments_to_articleFragments"
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/savedNewsFragments"
-        android:name="com.example.newsapp.ui.fragments.SavedNewsFragments"
+        android:name="com.example.newsapp.ui.ui.fragments.SavedNewsFragments"
         android:label="SavedNewsFragments" >
         <action
             android:id="@+id/action_savedNewsFragments_to_articleFragments"
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchNewsFragments"
-        android:name="com.example.newsapp.ui.fragments.SearchNewsFragments"
+        android:name="com.example.newsapp.ui.ui.fragments.SearchNewsFragments"
         android:label="SearchNewsFragments" >
         <action
             android:id="@+id/action_searchNewsFragments_to_articleFragments"
@@ -45,7 +45,7 @@
     </fragment>
     <fragment
         android:id="@+id/articleFragments"
-        android:name="com.example.newsapp.ui.fragments.ArticleFragments"
+        android:name="com.example.newsapp.ui.ui.fragments.ArticleFragments"
         android:label="ArticleFragments"
         app:enterAnim="@anim/slide_in_right"
         app:exitAnim="@anim/slide_out_left"
